add new routes, POST route unfinished
